--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
       padding: 40px;
       transition: margin-left 0.3s ease;
     }
+
+    .button-link {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.2s ease;
+    }
+
+    .button-link:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 <body>
@@ -26,6 +41,7 @@
   <!-- Main Content -->
   <div class="main-content">
     <h1>UNDER CONSTRUCTION</h1>
+    <a href="/api/message" class="button-link">Go to /api/message</a>
   </div>
 
 </body>
