--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- Main Content -->
   <div class="main-content">
     <h1>UNDER CONSTRUCTION</h1>
-    <a href="/api/message" class="button-link">Go to /api/message</a>
+    <a href="/api/message" class="button-link">Send a Message</a>
   </div>
 
 </body>
